2005-01-19  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b324

	* Fix: Per Album rss was broken.
	  Caught by: GeekLog Georg.

2005-01-18  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b323

	* Fix: Sorting for capture date in stats.php was broken, 
	       because it was based on old structure, not timestamp.
	  Caught by: Michael Dayah

2005-01-11  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b322

	* Change: New standard theme. its now blue.
	 TODO: adjust skins

	* New:  Added Icons in albums.php, view_albums.php and view_photo.php
		Choices are: only icons, only text, or both.

	 	- new getIconText()
		- new makeIconMenu
		
	* Change: Layout on: adminpage, slideshow, upgrade_album, user_preferences
		  view_comments, layout/adminbox.inc
	
2005-01-04  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b321

	* Change:  Temporarily disable the session hijack prevention until we
	  can re-think the detection method

2005-01-03  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b320

	* 1074480: $wmName was missing from globals in layout/watermarkform.inc

	* Fix: canModifyUser() is true when the user can modify themselves, so
	  we shouldn't use this as a key for displaying the admin page link

2004-12-28  Christian Mohn <h0bbel@p0ggel.org> 1.5-cvs-b319
	*New: Added per-album RSS patch (RFE #1020449) by
	      Don Willingham <donwillingham@users.sf.net>

	* New: RSS's alternate link tag added to view_album.php.
	* New: Added getSubAlbums to Album.php.
	* New: Added getAlbumsByRoot to AlbumDB.php.
	* Change: RSS link on bottom of album has ?set_albumName={albumname} 
	  appended.
	* Change: rss.php now obeys ?set_albumName, if set only items of named album
	  and children albums are generated.

2004-12-28  Chris Kelly <ckdake@users.sf.net> 1.5-cvs-b318

	* Fix: Bug 848309, moved JavaScript blur() to prevent
		main window from possibly having focus when a 
		popup window is in the foreground.

2004-12-28  Chris Kelly <ckdake@users.sf.net> 1.5-cvs-b317
