@@ -24,8 +24,10 @@
 
 require_once(dirname(__FILE__) . '/init.php');
 
-$username = removeTags(getRequestVar('username'));
-list($gallerypassword, $forgot, $login) = getRequestVar(array('gallerypassword', 'forgot', 'login'));
+list($username, $gallerypassword, $forgot, $login) = getRequestVar(array('username', 'gallerypassword', 'forgot', 'login'));
+
+/* decode user data, remove tags, and then re-encode using html entities for safe page display */
+$username = htmlspecialchars(removeTags(urldecode($username)));
 
 doctype();
 ?>
