@@ -1,3 +1,9 @@
+2005-01-19  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b325
+
+    * Fix: Address several instances of improperly sanitized user-data
+
+    * Change: Remove adv_search.php, since it doesn't work and isn't being maintained
+
 2005-01-19  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b324
 
 	* Fix: Per Album rss was broken.
